<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginStart="25dp"
    android:layout_marginEnd="25dp"
    tools:context=".MainActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="S."
        android:textColor="@android:color/holo_red_light"
        android:textSize="42sp"
        android:textStyle="bold"
        android:layout_marginTop="35dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginTop="45dp"
        android:textStyle="bold"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pancard"
        android:textSize="13sp"
        android:textColor="@color/black"
        android:layout_marginTop="45dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_thin"
        android:id="@+id/edit_text"
        android:textColor="@color/black"
        android:padding="14dp"
        android:layout_marginTop="5dp"
        android:textSize="14sp"
        android:maxLength="8"
        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXZabcdefghijklmnopqrstuvwxyz1234567890"
        />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="BIRTHDATE"
        android:textSize="13sp"
        android:textColor="@color/black"
        android:layout_marginTop="35dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        android:layout_marginTop="5dp"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"

            android:id="@+id/tvday"
android:background="@drawable/border_thin"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_margin="10dp"
            android:padding="14dp"
            android:textColor="@color/black"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/tvmonth"
            android:background="@drawable/border_thin"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_margin="10dp"

            android:padding="14dp"
            android:textColor="@color/black"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/tvyear"
            android:background="@drawable/border_thin"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_margin="10dp"
            android:padding="14dp"
            android:textColor="@color/black"
            />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="55dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/paninfo"
            android:textSize="14sp"
            android:textColor="@color/black"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/paninfo2"
            android:textSize="14sp"
            android:textColor="@color/black"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/paninfo3"
                android:textSize="14sp"
                android:textColor="@color/black"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/learnmore"
                android:textColor="@color/purple_500"
                android:textSize="14sp"
                />
        </LinearLayout>

    </LinearLayout>
<com.google.android.material.button.MaterialButton
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/next"
    android:id="@+id/next"
    app:cornerRadius="10dp"
    android:layout_marginTop="25dp"
    android:padding="15dp"
    />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/idont"
        android:textColor="@color/purple_500"
        android:textSize="16sp"
        android:layout_marginTop="35dp"
        android:layout_gravity="center"
        android:id="@+id/donthavepan"
        />
</LinearLayout>